--- a/index.html
+++ b/index.html
@@ -24,8 +24,146 @@
     <![endif]-->
 
 </head>
-
 <body>
+<!--MENU Y LOGO-->
+<div class="header">
+    <div class="container">
+ 	    <div class="row">
+            <div class="col-md-6">
+                <h1>FREELANCER</h1>
+            </div>
+ 	        <div class="col-md-6">
+ 		         <div class="main-menu">  
+ 			        <ul class="list-nav">
+                        <li><a href="#">PORTAFOLIO</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">BLOG</a></li>
+                        <li><a href="#">CONTAC</a></li>
+          	        </ul>
+ 		        </div>
+            </div>
+ 	    </div>
+     </div>
+</div>
+<!--SUPER STAR-->
+<div class="fondodestar">  
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>SUPER STAR</h1>
+                <hr><span><i class="fa fa-star-o"></i></span><hr>
+                <p>Web Developer - Graphic Artist - User Experience Designer</p>
+            </div>
+        </div>
+    </div>
+</div>
+<!--PORTAFOLIO-->
+<div class="fondodeportafolio">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>PORTAFOLIO</h1>
+                <hr><span><i class="fa fa-star-o"></i></span><hr>
+            </div>
+        <div class="row">
+            <div class="col-md-3">
+                <img src="img/portfolio/cabin.png">
+            </div>
+            <div class="col-md-3">
+                <img src="img/portfolio/cake.png">            
+            </div>
+            <div class="col-md-3">
+                <img src="img/portfolio/circus.png">            
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+                <img src="img/portfolio/game.png">
+            </div>
+            <div class="col-md-3">
+                <img src="img/portfolio/safe.png">            
+            </div>
+            <div class="col-md-3">
+                <img src="img/portfolio/submarine.png">            
+            </div>
+        </div>
+        </div>
+    </div>
+</div>
+<!--ABOUT-->
+<div class="fondodeabout">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2>ABOUT</h2>
+                <hr><span><i class="fa fa-star-o"></i></span><hr>
+            </div>
+        </div>
+        <div class="row">
+              <div class="col-md-6">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ratione sint qui reprehenderit officia quasi quod ab modi                      ipsa, nisi dolorum, facere eligendi minima sit recusandae vero excepturi, architecto quam!</p>
+              </div>
+              <div class="col-md-6">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ratione sint qui reprehenderit officia quasi quod ab modi                      ipsa, nisi dolorum, facere eligendi minima sit recusandae vero excepturi, architecto quam!</p>
+              </div>
+        </div>
+        <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default"><i class="fa fa-download"></i> Download Theme</button>
+        </div>
+    </div>
+</div>
+<!--CONTACT ME-->
+ <div class="fondodecontacme">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2>CONTACT ME</h2>
+                <hr><span><i class="fa fa-star-o"></i></span><hr>
+                <input type="text" class="form-control" placeholder="Name">
+                <input type="text" class="form-control" placeholder="Email Address">
+                <input type="text" class="form-control" placeholder="Phone Number">
+                <input type="text" class="form-control" placeholder="Message">
+                <div class="btn-group" role="group">
+                <button type="button" class="btn btn-default">Send</button>
+                </div>
+            </div>
+        </div>
+     </div>
+</div>
+ <!--FOOTER 1-->
+ <div class="footer">
+     <div class="container">
+         <div class="row">
+             <div class="col-md-4">
+                 <h4>LOCATION</h4>
+                 <p>3481 Melrose Palace</p>
+                 <p>Berbely Hills, CA 90210</p>
+             </div>
+             <div class="col-md-4">
+                 <h4>AROUND THE WEB</h4>
+                 <i class="fa fa-facebook"></i>
+                 <i class="fa fa-google-plus"></i>
+                 <i class="fa fa-twitter"></i>
+                 <i class="fa fa-linkedin"></i>
+                 <i class="fa fa-dribbble"></i>
+             </div>
+             <div class="col-md-4">
+                 <h4>ABOUT FREELANCER</h4>
+                 <p>Freelancer is a free to use, open source <br>Bootstrap theme created by <a href="#">Star Bootstrap.</a></p>
+             </div>
+         </div>
+     </div>
+ </div>
+ <!--FOOTER 2-->
+ <div class="footer2">
+     <div class="row">
+         <div class="col-md-12">
+             <h6>Copyright Your <i class="fa fa-copyright"></i> Website 2014</h6>
+         </div>
+     </div>
+ </div>
+  
+   
     <!-- Inserta tu código aqui -->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
