Maquetación final de index,blog,about

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
  	        <div class="col-md-6">
  		         <div class="main-menu">  
  			        <ul class="list-nav">
-                        <li><a href="#">PORTAFOLIO</a></li>
-                        <li><a href="#">ABOUT</a></li>
-                        <li><a href="#">BLOG</a></li>
-                        <li><a href="#">CONTAC</a></li>
+                        <li><a href="#portafolio">PORTAFOLIO</a></li>
+                        <li><a href="#about">ABOUT</a></li>
+                        <li><a href="blog.html">BLOG</a></li>
+                        <li><a href="#contact">CONTACT</a></li>
           	        </ul>
  		        </div>
             </div>
@@ -46,7 +46,7 @@
      </div>
 </div>
 <!--SUPER STAR-->
-<div class="fondodestar">  
+<div class="fondo1">  
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -58,7 +58,7 @@
     </div>
 </div>
 <!--PORTAFOLIO-->
-<div class="fondodeportafolio">
+<div id="portafolio" class="fondo2">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -91,7 +91,7 @@
     </div>
 </div>
 <!--ABOUT-->
-<div class="fondodeabout">
+<div id="about" class="fondo3">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -113,7 +113,7 @@
     </div>
 </div>
 <!--CONTACT ME-->
- <div class="fondodecontacme">
+ <div id="contact" class="fondo4">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -163,11 +163,9 @@
      </div>
  </div>
   
-   
     <!-- Inserta tu código aqui -->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/freelancer.js"></script>
 </body>
-
 </html>
