--- a/about.html
+++ b/about.html
@@ -23,12 +23,101 @@
     <![endif]-->
 
 </head>
-
 <body>
-    <!-- Inserta tu código aqui -->
+<!--ABOUT ME-->
+<div class="fondo01">  
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <img src="img/profile.png">
+                <h1>ABOUT ME</h1>
+                <hr><span><i class="fa fa-star-o"></i></span><hr>
+                <p>Web Developer - Graphic Artist - User Experience Designer</p>
+            </div>
+        </div>
+    </div>
+</div>
+<!--SECCION2-->
+<div class="fondo3">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos facere quisquam possimus debitis enim, sunt, sit magnam, alias                    ut esse fugit beatae eum similique officiis consequuntur quaerat non laboriosam consectetur?</p>
+            </div>
+            <div class="col-md-6">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore reiciendis quasi nisi, nemo laboriosam. Necessitatibus quidem                    architecto deserunt modi possimus minus ipsum ratione. Expedita facere repudiandae facilis dolorum qui similique.</p>
+            </div>
+        </div>
+        <div class="row">
+              <div class="col-md-4">
+                  <h3>I'M AWESOME</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ratione sint qui reprehenderit officia quasi quod ab modi                      ipsa, nisi dolorum, facere eligendi minima sit recusandae vero excepturi, architecto quam!</p>
+              </div>
+              <div class="col-md-4">
+                  <h3>I'N INNOVATIVE</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ratione sint qui reprehenderit officia quasi quod ab modi                      ipsa, nisi dolorum, facere eligendi minima sit recusandae vero excepturi, architecto quam!</p>
+              </div>
+              <div class="col-md-4">
+                  <h3>I'N EVOLVING</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ratione sint qui reprehenderit officia quasi quod ab modi                      ipsa, nisi dolorum, facere eligendi minima sit recusandae vero excepturi, architecto quam!</p>
+              </div> 
+        </div>
+    </div>
+</div>
+ <!--CONTACT ME-->
+<div class="fondo4">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2>CONTACT ME</h2>
+                <hr><span><i class="fa fa-star-o"></i></span><hr>
+                <input type="text" class="form-control" placeholder="Name">
+                <input type="text" class="form-control" placeholder="Email Address">
+                <input type="text" class="form-control" placeholder="Phone Number">
+                <input type="text" class="form-control" placeholder="Message">
+                <div class="btn-group" role="group">
+                <button type="button" class="btn btn-default">Send</button>
+                </div>
+            </div>
+        </div>
+     </div>
+</div>  
+   <!--FOOTER 1-->
+ <div class="footer">
+     <div class="container">
+         <div class="row">
+             <div class="col-md-4">
+                 <h4>LOCATION</h4>
+                 <p>3481 Melrose Palace</p>
+                 <p>Berbely Hills, CA 90210</p>
+             </div>
+             <div class="col-md-4">
+                 <h4>AROUND THE WEB</h4>
+                 <i class="fa fa-facebook"></i>
+                 <i class="fa fa-google-plus"></i>
+                 <i class="fa fa-twitter"></i>
+                 <i class="fa fa-linkedin"></i>
+                 <i class="fa fa-dribbble"></i>
+             </div>
+             <div class="col-md-4">
+                 <h4>ABOUT FREELANCER</h4>
+                 <p>Freelancer is a free to use, open source <br>Bootstrap theme created by <a href="#">Star Bootstrap.</a></p>
+             </div>
+         </div>
+     </div>
+ </div>
+ <!--FOOTER 2-->
+ <div class="footer2">
+     <div class="row">
+         <div class="col-md-12">
+             <h6>Copyright Your <i class="fa fa-copyright"></i> Website 2014</h6>
+         </div>
+     </div>
+ </div>
+
+ <!-- Jquery -->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/freelancer.js"></script>
 </body>
-
 </html>
