--- a/blog.html
+++ b/blog.html
@@ -23,9 +23,169 @@
     <![endif]-->
 
 </head>
-
 <body>
-    <!-- Inserta tu código aqui -->
+<!--MENU Y LOGO-->
+<div class="header">
+    <div class="container">
+ 	    <div class="row">
+            <div class="col-md-6">
+                <h1>FREELANCER</h1>
+            </div>
+ 	        <div class="col-md-6">
+ 		         <div class="main-menu">  
+ 			        <ul class="list-nav">
+                        <li><a href="#portafolio2">PORTAFOLIO</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="blog.html">BLOG</a></li>
+                        <li><a href="#contact2">CONTACT</a></li>
+          	        </ul>
+ 		        </div>
+            </div>
+ 	    </div>
+     </div>
+</div>
+<!--SUPER STAR-->
+<div class="fondo1">  
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>OUR THOUGHTS</h1>
+                <hr><span><i class="fa fa-star-o"></i></span><hr>
+                <p>news, integrations and the answer to life, the universe and everything else</p>
+            </div>
+        </div>
+    </div>
+</div>
+<!--IMG Y TEXTO-->
+<div id="portafolio2" class="fondo5">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2>LET'S CODE IN JAVASCRIP'S ES6. NO<br>
+                TRANSPILER. LET'S CODE IN THE FUTURE NOW</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="img/portfolio/cabin.png">
+            </div>
+            <div class="col-md-8">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit vel dolorem ex exercitationem nisi illo tempora, laborum, id                     unde doloribus inventore repudiandae tenetur. Pariatur, sequi, quibusdam rerum ducimus nam at?.<br>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita aperiam, officiis distinctio? Aperiam vitae facilis maxime                     placeat amet aspernatur non maiores, illo labore earum sit mollitia ipsum sapiente quidem rerum.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="img/portfolio/cake.png">
+            </div>
+            <div class="col-md-8">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit vel dolorem ex exercitationem nisi illo tempora, laborum, id                      unde doloribus inventore repudiandae tenetur. Pariatur, sequi, quibusdam rerum ducimus nam at?.<br>
+                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita aperiam, officiis distinctio? Aperiam vitae facilis maxime                    placeat amet aspernatur non maiores, illo labore earum sit mollitia ipsum sapiente quidem rerum.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="img/portfolio/circus.png">
+            </div>
+            <div class="col-md-8">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit vel dolorem ex exercitationem nisi illo tempora, laborum, id                      unde doloribus inventore repudiandae tenetur. Pariatur, sequi, quibusdam rerum ducimus nam at?.<br>
+                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita aperiam, officiis distinctio? Aperiam vitae facilis maxime                    placeat amet aspernatur non maiores, illo labore earum sit mollitia ipsum sapiente quidem rerum.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="img/portfolio/game.png">
+            </div>
+            <div class="col-md-8">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit vel dolorem ex exercitationem nisi illo tempora, laborum, id                      unde doloribus inventore repudiandae tenetur. Pariatur, sequi, quibusdam rerum ducimus nam at?.<br>
+                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita aperiam, officiis distinctio? Aperiam vitae facilis maxime                    placeat amet aspernatur non maiores, illo labore earum sit mollitia ipsum sapiente quidem rerum.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="img/portfolio/safe.png">
+            </div>
+            <div class="col-md-8">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit vel dolorem ex exercitationem nisi illo tempora, laborum, id                      unde doloribus inventore repudiandae tenetur. Pariatur, sequi, quibusdam rerum ducimus nam at?.<br>
+                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita aperiam, officiis distinctio? Aperiam vitae facilis maxime                    placeat amet aspernatur non maiores, illo labore earum sit mollitia ipsum sapiente quidem rerum.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="img/portfolio/submarine.png">
+            </div>
+            <div class="col-md-8">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit vel dolorem ex exercitationem nisi illo tempora, laborum, id                      unde doloribus inventore repudiandae tenetur. Pariatur, sequi, quibusdam rerum ducimus nam at?.<br>
+                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita aperiam, officiis distinctio? Aperiam vitae facilis maxime                    placeat amet aspernatur non maiores, illo labore earum sit mollitia ipsum sapiente quidem rerum.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <ul class="pagination">
+                  <li><a href="#">&laquo;</a></li>
+                  <li><a href="#">1</a></li>
+                  <li><a href="#">2</a></li>
+                  <li><a href="#">3</a></li>
+                  <li><a href="#">4</a></li>
+                  <li><a href="#">5</a></li>
+                  <li><a href="#">&raquo;</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<!--CONTACT ME-->
+<div id="contact2" class="fondo4">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2>CONTACT ME</h2>
+                <hr><span><i class="fa fa-star-o"></i></span><hr>
+                <input type="text" class="form-control" placeholder="Name">
+                <input type="text" class="form-control" placeholder="Email Address">
+                <input type="text" class="form-control" placeholder="Phone Number">
+                <input type="text" class="form-control" placeholder="Message">
+                <div class="btn-group" role="group">
+                <button type="button" class="btn btn-default">Send</button>
+                </div>
+            </div>
+        </div>
+     </div>
+</div>
+  <!--FOOTER 1-->
+ <div class="footer">
+     <div class="container">
+         <div class="row">
+             <div class="col-md-4">
+                 <h4>LOCATION</h4>
+                 <p>3481 Melrose Palace</p>
+                 <p>Berbely Hills, CA 90210</p>
+             </div>
+             <div class="col-md-4">
+                 <h4>AROUND THE WEB</h4>
+                 <i class="fa fa-facebook"></i>
+                 <i class="fa fa-google-plus"></i>
+                 <i class="fa fa-twitter"></i>
+                 <i class="fa fa-linkedin"></i>
+                 <i class="fa fa-dribbble"></i>
+             </div>
+             <div class="col-md-4">
+                 <h4>ABOUT FREELANCER</h4>
+                 <p>Freelancer is a free to use, open source <br>Bootstrap theme created by <a href="#">Star Bootstrap.</a></p>
+             </div>
+         </div>
+     </div>
+ </div>
+ <!--FOOTER 2-->
+ <div class="footer2">
+     <div class="row">
+         <div class="col-md-12">
+             <h6>Copyright Your <i class="fa fa-copyright"></i> Website 2014</h6>
+         </div>
+     </div>
+ </div>
+  
+ <!-- Inserta tu código aqui -->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/freelancer.js"></script>
