--- a/blog.html
+++ b/blog.html
@@ -29,13 +29,13 @@
     <div class="container">
  	    <div class="row">
             <div class="col-md-6">
-                <h1>FREELANCER</h1>
+                <h3>FREELANCER</h3>
             </div>
  	        <div class="col-md-6">
  		         <div class="main-menu">  
  			        <ul class="list-nav">
                         <li><a href="#portafolio2">PORTAFOLIO</a></li>
-                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="about.html">ABOUT</a></li>
                         <li><a href="blog.html">BLOG</a></li>
                         <li><a href="#contact2">CONTACT</a></li>
           	        </ul>
