--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <div class="container">
  	    <div class="row">
             <div class="col-md-6">
-                <h1>FREELANCER</h1>
+                <h3>FREELANCER</h3>
             </div>
  	        <div class="col-md-6">
  		         <div class="main-menu">  
- 			        <ul class="list-nav">
+ 			        <ul>
                         <li><a href="#portafolio">PORTAFOLIO</a></li>
-                        <li><a href="#about">ABOUT</a></li>
+                        <li><a href="about.html">ABOUT</a></li>
                         <li><a href="blog.html">BLOG</a></li>
                         <li><a href="#contact">CONTACT</a></li>
           	        </ul>
@@ -51,7 +51,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h1>SUPER STAR</h1>
-                <hr><span><i class="fa fa-star-o"></i></span><hr>
+                <hr><i id="icono1" class="fa fa-star"></i><hr>
                 <p>Web Developer - Graphic Artist - User Experience Designer</p>
             </div>
         </div>
@@ -63,7 +63,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h1>PORTAFOLIO</h1>
-                <hr><span><i class="fa fa-star-o"></i></span><hr>
+                <hr><i id="icono2" class="fa fa-star"></i></span><hr>
             </div>
         <div class="row">
             <div class="col-md-3">
@@ -91,7 +91,7 @@
     </div>
 </div>
 <!--ABOUT-->
-<div id="about" class="fondo3">
+<div class="fondo3">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -167,5 +167,19 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/freelancer.js"></script>
+
+<script>
+	$(document).ready(init);
+	function init()
+	{
+		//inicio de aplicación
+		$(".list-nav a").click(selectMenu);	
+	}
+	
+	function selectMenu()
+	{
+	$(".main-menu li a").removeClass("active");
+	$(this).addClass("active");
+</script>
 </body>
 </html>
