--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>PORTAFOLIO</h1>
+                <h3>PORTAFOLIO</h3>
                 <hr><i id="icono2" class="fa fa-star"></i></span><hr>
             </div>
         <div class="row">
@@ -75,8 +75,7 @@
             <div class="col-md-4">
                 <img src="img/portfolio/circus.png">            
             </div>
-        </div>
-        <div class="row">
+        
             <div class="col-md-4">
                 <img src="img/portfolio/game.png">
             </div>
@@ -87,7 +86,6 @@
                 <img src="img/portfolio/submarine.png">            
             </div>
         </div>
-        </div>
     </div>
 </div>
 <!--ABOUT-->
@@ -95,15 +93,15 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h2>ABOUT</h2>
+                <h3>ABOUT</h3>
                 <hr><span><i class="fa fa-star-o"></i></span><hr>
             </div>
         </div>
         <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-4 col-md-offset-2">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ratione sint qui reprehenderit officia quasi quod ab modi                      ipsa, nisi dolorum, facere eligendi minima sit recusandae vero excepturi, architecto quam!</p>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-4">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ratione sint qui reprehenderit officia quasi quod ab modi                      ipsa, nisi dolorum, facere eligendi minima sit recusandae vero excepturi, architecto quam!</p>
               </div>
         </div>
@@ -180,6 +178,7 @@
 	{
 	$(".main-menu li a").removeClass("active");
 	$(this).addClass("active");
+    }
 </script>
 </body>
 </html>
