--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 </head>
 <body>
-<!--MENU Y LOGO-->
+<!--MENU Y LOGO p -->
 <div class="header">
     <div class="container">
  	    <div class="row">
